--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="expert">
                 <!---Icon------>
                 <div class="e-b-icon">
-                    <i class="fa-brands fa-SQL"></i>
+                    <i class="fa-solid fa-database"></i>
                 </div>
                 <!---Text------>
                 <div class="e-b-text">
