--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
         <p>As a young, extremely eager, and fast-paced learner, I am hoping to hone in on coding skills and make an impact
             in the tech world as a Java Developer.</p>
             
-        <p>Was previously on a semi-professional sports team at a Mid-American Conference(MAC) University with a full team roster of at least 127 athletes. Transferred from the University of
+        <p>Was previously on a collegiate sports team at a Mid-American Conference(MAC) University with a full team roster of at least 127 athletes. Transferred from the University of
             Iowa, where I played BIG 10 football and was accomplishing dreams of receiving a Management degree.</p>
             
-        <p>I commonly exhibit hard work, while I was in the process of learning responsibilities and calls to ensure the play
+        <p>I commonly exhibited hard work, while I was in the process of learning responsibilities and calls to ensure the play
             was executed in the correct fashion. Develops relationships with teammates while establishing a strong trust.
             With a main focus as a student-athlete at Miami University, I pursued a great education to further my career
             path and developed a useful skill set. Most recent job was playing for the Detroit Lions as a cornerback in the
