--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,8 @@
         <!---Box------>
         <div class="portfolio-box">
             <img src="Photos/market.jpeg">
-            <p>Working Guenther's Market application that allows you to purchase various things from a store while also storing them inside of your cart and cashing out!</p>
-            <a href="https://github.com/cjboswell98/GrandCircusProjects/blob/main/GeunthersMarket/GeunthersMarket.java">View<i class="fa-solid fa-eye"></i></a>
+            <p>Played a significant role in creating an Angular application that allows the user to keep track of their favorite events, add new ones, and edit the events that they already have listed. (Utilized OOP, Angular, MySQL, Created API)</p>
+            <a href="https://dev3011.d3vyzf1zne0f07.amplifyapp.com/">View<i class="fa-solid fa-eye"></i></a>
         </div>
          <!---Box------>
          <div class="portfolio-box">
