--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
         <!---Box------>
         <div class="portfolio-box">
             <img src="Photos/market.jpeg">
-            <p>Played a significant role in creating an Angular application that allows the user to keep track of their favorite events, add new ones, and edit the events that they already have listed. (Utilized OOP, Angular, MySQL, Created API)</p>
+            <p>One Stop Stocks is a full-stack Java application using Angular for the front-end, Java Spring for the back-end API, and MySQL for a CRUD Database (Allows you to browse the Top 50 Stocks of different days). </p>
             <a href="https://dev3011.d3vyzf1zne0f07.amplifyapp.com/">View<i class="fa-solid fa-eye"></i></a>
         </div>
          <!---Box------>
