--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
         <div class="portfolio-box">
             <img src="Photos/market.jpeg">
             <p>One Stop Stocks is a full-stack Java application using Angular for the front-end, Java Spring for the back-end API, and MySQL for a CRUD Database (Allows you to browse the Top 50 Stocks of different days). </p>
-            <a href="https://dev3011.d3vyzf1zne0f07.amplifyapp.com/">View<i class="fa-solid fa-eye"></i></a>
+            <a href="https://dev3011.d3vyzf1zne0f07.amplifyapp.com/user">View<i class="fa-solid fa-eye"></i></a>
         </div>
          <!---Box------>
          <div class="portfolio-box">
